[gd_scene load_steps=5 format=3 uid="uid://dys3c0e6k8bes"]

[ext_resource type="Script" path="res://main.gd" id="1_gocsj"]
[ext_resource type="Script" path="res://xorg.gd" id="3_w0xqy"]
[ext_resource type="PackedScene" uid="uid://2r3r8x85lodo" path="res://root_ui.tscn" id="4_x167x"]
[ext_resource type="PackedScene" uid="uid://cl2qra3i10eqc" path="res://window_texture.tscn" id="5_plcpf"]

[node name="Main" type="Node2D"]
script = ExtResource("1_gocsj")

[node name="Xorg" type="Xorg" parent="."]
script = ExtResource("3_w0xqy")

[node name="WindowTexture" parent="." instance=ExtResource("5_plcpf")]
scale = Vector2(1, 1)

[node name="RootUI" parent="." instance=ExtResource("4_x167x")]

[connection signal="window_configured" from="Xorg" to="." method="_on_xorg_window_configured"]
[connection signal="window_created" from="Xorg" to="." method="_on_xorg_window_created"]
[connection signal="window_destroyed" from="Xorg" to="." method="_on_xorg_window_destroyed"]
